--- a/css/app.css
+++ b/css/app.css
@@ -48,9 +48,15 @@
     margin: 0 auto; }
   .hero .icons {
     text-align: center;}
-  .hero .icons img {
+  .hero .fb-img {
+    background: url("../images/fb.png") no-repeat center center;
+    background-size: cover;
     height: 64px;
-    width: 64px;}
+    width: 64px;
+    /* border-radius: 50%;*/
+    display: block;
+    text-align: center;
+    margin: 0 auto; }
   @media only screen and (min-width: 40.063em) {
     /*.hero .tech-img {*/
       /*height: 18rem;*/
